<resources>
    <string name="app_name">Mailbox</string>
    <string name="log_in_button">Zaloguj się</string>
    <string name="sign_up_button">Utwórz konto</string>
    <string name="welcome_text">Witaj w aplikacji skrzynki na listy!</string>
    <string name="login_header">Zaloguj się do aplikacji mailbox</string>
    <string name="email">E-mail</string>
    <string name="wrong_email">Niepoprawny adres e-mail</string>
    <string name="password">Hasło</string>
    <string name="wrong_password">Wprowadź poprawne hasło</string>
    <string name="forget_password">Nie pamiętasz hasła?</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="no_internet_connection">Brak połączenia z internetem!</string>
    <string name="login_failed_toast">Nie udało się zalogować do aplikacji</string>
    <string name="nav_header_desc">Zdjęcie profilowe</string>
    <string name="nav_header_title">Nazwa użytkownika</string>
    <string name="nav_header_subtitle">Adres e-mail</string>
    <string name="menu_home">Moje skrzynki</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_about">O aplikacji</string>
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="mailbox_name">Nazwa skrzynki</string>
    <string name="battery">Bateria: </string>
    <string name="humidity">Wilgotność: </string>
    <string name="temperature">Temperatura: </string>
    <string name="pressure">Ciśnienie: </string>
    <string name="click_to_show_delivery_dates">Naciśnij aby zobaczyć daty otrzymania listu</string>
    <string name="logout">Wyloguj się</string>
    <string name="register_header">Zarejstruj się do aplikacji</string>
    <string name="wrong_repeat_password">Błędna weryfikacja hasła</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="wrong_username">Niepoprawna nazwa użytkownika</string>
    <string name="register_failed_toast">Nie udało się zarejestrować w aplikacji!</string>
    <string name="register_success_title">Zarejestrowano użytkownika</string>
    <string name="register_success_message">Na podany adres e-mail wysłano link aktywacyjny. Aktywuj konto aby się zalogować</string>
    <string name="add_mailbox_header">Dodaj nową skrzynkę</string>
    <string name="mailbox_username">Nazwa użytkownika skrzynki</string>
    <string name="mailbox_password">Hasło skrzynki</string>
    <string name="wrong_mailbox_name">Wprowadź nazwę skrzynki</string>
    <string name="add_mailbox_button">Dodaj skrzynkę</string>
    <string name="add_mailbox_description">Aby dodać nową skrzynkę wprowaź nazwę użytkownika skrzynki oraz hasło znajdujące się na urządzeniu. Dodatkowo wprowadź swoją nazwę skrzynki</string>
    <string name="no_token">Nie udało się uwierzytelnić użytkownika. Wylogowano z aplikacji</string>
    <string name="delete_mailbox">Usuń skrzynkę</string>
    <string name="recieved">"otrzymano: %s"</string>
    <string name="mail_dates_history">Daty otrzymania listów</string>
    <string name="application_info">Aplikacja powstała jako część pracy magisterskiej realizowanej na Politechnice Rzeszowskiej, na kierunku Mechatronika. Tematem pracy było zaprojektowanie skrzynki na listy, która będzie powiadamiać użytkownika o otrzymanej korespondencji za pośrednictwem aplikacji mobilnej. Autorem aplikacji jest Kamil Wnęk.</string>
    <string name="show_notifications">Pokazuj powiadomienia o nowym liście</string>
    <string name="change_email">Zmień e-mail</string>
    <string name="change">zmień</string>
    <string name="change_password">Zmień hasło</string>
    <string name="old_email">Aktualny adres e-mail</string>
    <string name="mailbox_new_email">Nowy adres e-mail</string>
    <string name="repeat_new_email">powtórz nowy adres e-mail</string>
    <string name="wrong_repeat_email">Błędna weryfikacja adresu e-mail</string>
    <string name="old_password">Aktualne hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_new_password">powtórz nowe hasło</string>
    <string name="change_password_success">Pomyślnie zmieniono hasło!</string>
    <string name="change_email_success">Pomyślnie zmieniono adres email!</string>
    <string name="new_letter_recieved">Otrzymano nowy list</string>
    <string name="notice">List awizowany</string>
    <string name="battery_value">%s %%</string>
    <string name="temperature_value">%s &#176;C</string>
    <string name="pressure_value">%s hPa</string>
    <string name="humidity_value">%s %%</string>
    <string name="error_code">"Kod błędu: "</string>
    <string name="add_mailbox_failed_toast">Nie udało się dodać skrzynki!</string>
    <string name="change_email_failure">Nie udało się zmienić adresu email!</string>
    <string name="change_password_failure">Nie udało się zmienić hasła!</string>


</resources>