<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/mailboxNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/orange_700"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/mailbox_name">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/newMailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="20sp"
                android:visibility="gone"
                android:textColor="#000000"
                android:text="Otrzymano nowy list">
            </TextView>

            <TextView
                android:id="@+id/noticeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:visibility="gone"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="List awizowany">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/orange_300"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/battery"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/batteryTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"
                        android:text="100%"
                        android:textColor="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/temperature"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/temperatureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"
                        android:text="24,3"
                        android:textColor="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/pressure"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/pressureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"
                        android:text="1024 hPa"
                        android:textColor="#000000" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/humidity"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/humidityTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"
                        android:text="100%"
                        android:textColor="#000000" />

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/click_to_show_delivery_dates">
    </TextView>



</LinearLayout>
